cmake_minimum_required(VERSION 3.6)
project(libpdb)
set(CMAKE_CXX_STANDARD 11)

INCLUDE_DIRECTORIES("include")

if(MAKE_PYTHON)
   file(GLOB SOURCE_FILES src/pdb/*cpp src/python/*cpp)
   FIND_PACKAGE(PythonInterp)
   FIND_PACKAGE(PythonLibs)
   if (${PYTHON_VERSION_MAJOR} EQUAL 3)
       FIND_PACKAGE(Boost COMPONENTS python3)
   else()
       FIND_PACKAGE(Boost COMPONENTS python)
   endif()
   INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
   LINK_LIBRARIES(${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
else()
   file(GLOB SOURCE_FILES src/pdb/*.cpp)
endif()

add_library(pdb SHARED ${SOURCE_FILES})
#PYTHON_ADD_MODULE(pypdb ${SOURCE_FILES})
